--- a/css/team.css
+++ b/css/team.css
@@ -236,10 +236,10 @@ header .intro-text .skills {
         width: 0 !important;
     }
 }
-.text-container {  
+.text-container { 
+    position: absolute;
     width: 50px;
     height: 200px;
     overflow-y: scroll;
     overflow-x:hidden;
-    §
 }
