--- a/css/tedxistalameda.css
+++ b/css/tedxistalameda.css
@@ -798,8 +798,8 @@ body input:checked ~ div .content-list{
 body input ~ div .footnote {
 	position: fixed;
 	width: 100%;
+	left: 0; margin: 0 auto;
 	bottom: 20px;
-	margin: 0 auto;
 	font-size: 12px;
 	font-weight: 400;
 	color: #ff2100;
@@ -1291,6 +1291,7 @@ body input:checked ~ div .footnote {
 .videotalk{
 	width: 100%;
 	height: 100%;
+	margin-top: -1px;
 }
 
 .hoverlay {
@@ -1328,7 +1329,7 @@ body input:checked ~ div .footnote {
 .speaker{
 	color:#ff2100; 
 	font-size: 24px;
-	margin: 10px 0 10px 0;
+	margin: 5px 0 10px 0;
 }
 
 .speaker > a {
