--- a/css/tedxistalameda.css
+++ b/css/tedxistalameda.css
@@ -119,7 +119,7 @@ h1 {
  */
 mark {
   background: #ff0;
-  color: #000; }
+  color: #292929; }
 
 /**
  * Address inconsistent and variable font size in all browsers.
@@ -391,7 +391,7 @@ li {
 html, body {
     margin: 0;
     padding: 0;
-    color: #000;
+    color: #FFF;
     height: 100%;
     width: 100%;
     overflow: hidden;
@@ -427,99 +427,125 @@ main {
 /* TEDxISTAlameda LOGO - svg */
 .nav_logo {
     width: 100%;
-	margin-top: 5px;
-    min-height: 50px;
-    display: inherit;
     overflow: hidden;
     cursor: default !important; 
     text-align: center;
 	filter: blur(0px);
 }
-
+.nav_logo-svg {
+	margin-top: 8px;
+	margin-bottom: 8px;
+    position: absolute;
+    top: 0; left: 0;
+}
 .logo-container {
-    width: 20%;
-    min-width: 256px;
-    margin-left: auto;
-    margin-right: auto;
-    height: 0;
+    width: 256px;
+    margin: 0 auto;
     /* this formula makes sure the aspect ratio of the container equals that of the svg graphic 
     padding-top: (svg height / svg width) * width-value;*/
     padding-top: 4%;
     position: relative;
 }
 
-@media(max-width:640px){
+@media all and (max-width:640px){
    .logo-container {
-    float: left;
-    margin-left: 3vw;
-    margin-right: 0;
-}
-}
-
-.nav_logo-svg {
-	margin-top: 0px;
-    position: absolute;
-    top: 0; left: 0;
+	    width: 220px;
+	}
 }
 
 /* Hamburguer menu - svg */
 body input + label {
   	position: absolute;
-  	padding: 5px;
-	height 25px;
-	width: 25px;
-	top: 40%;
-	right: 10%;
+  	padding: 0;
+	width: 28px;
+	top: 22px;
+	right: 20%;
 	z-index: 6;
 }
-body input + label span {
-  position: absolute;
-  width: 100%;
-  height: 2px;
-  top: 50%;
-  margin-top: -1px;
-  left: 0;
-  display: block;
-  background: #000;
-  transition: 0.2s ease-in-out;
-  -moz-transition: 0.2s ease-in-out;
-  -webkit-transition: 0.2s ease-in-out;
+
+body input + label > svg {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 28px;
+	height: 28px;
+	opacity: 1;
+    transition: all 0.2s ease-in-out;
+    -moz-transition: all 0.2s ease-in-out;
+    -webkit-transition: all 0.2s ease-in-out;
 }
-body input + label span:first-child {
-  top: -2px;
+body input + label > svg:nth-child(2) {
+	transform: none;
+	transition: all 0.2s ease-in-out;
+    -moz-transition: all 0.2s ease-in-out;
+    -webkit-transition: all 0.2s ease-in-out;
 }
-body input + label span:last-child {
-  top: 12px;
+body input:checked + label > svg:nth-child(2) {
+  transform: translate(0px, 0px) rotate(135deg);
+}
+
+body input + label > .caption {
+	position: relative;
+	top: 31px;
+	left: 0;
+	width: 28px;
+	font-size: 10px;
+	text-transform: uppercase;
+	text-align: center;
+	color: #292929;
+	opacity: 0.5;
+	transition: all 0.2s linear;
+	-moz-transition: all 0.2s linear;
+    -webkit-transition: all 0.2s linear;
+	z-index: -2;
+}
+body input:checked + label > .caption {
+	opacity: 0;
+	transform: translate(0px,-10px);
+}
+
+body label:hover > svg {
+	opacity: 0.5;
 }
 
 body label:hover {
   cursor: pointer;
 }
 
-body input:checked + label span {
-  opacity: 0;
-  top: 50%;
-}
-body input:checked + label span:first-child {
-  opacity: 1;
-  transform: translate(0px, 0px) rotate(-45deg);
-}
-body input:checked + label span:last-child {
-  opacity: 1;
-  transform: translate(0px, 0px) rotate(45deg);
-}
 
-@media all and (min-width: 1020px) {
-    body input + label {
-        right: auto;
-        left: 50%;
-        margin-left: 450px;
+@media all and (max-width: 785px) {
+	body input + label {
+        top: 25px;
+		right: 10%;
+    }	
+    body input + label > svg {
+        width: 25px;
+		height: 25px;
+    }
+	body input + label > .caption {
+        width: 25px;
+		top: 25px;
     }
 }
-@media all and (min-width: 1300px) {
+@media all and (max-width: 450px) {
     body input + label {
-        margin-left: 600px;
+        top: 25px;
+		right: 5%;
+    }	
+    body input + label > svg {
+        width: 20px;
+		height: 20px;
     }
+	body input + label > .caption {
+        width: 20px;
+		top: 21px;
+		font-size: 9px;
+    }
+}
+@media all and (max-width: 370px) {
+    body input + label {
+		right: 1%;
+    }	
 }
 
 /* Close button from fullscreen / expandable view - svg */
@@ -530,13 +556,15 @@ body input:checked + label span:last-child {
     width: 26px;
     height: 26px;
     cursor: pointer;
+	opacity: 1;
     z-index: 10;
-    transition: transform .2s ease-in-out;
-	-moz-transition: transform .2s ease-in-out;
-	-webkit-transition: transform .2s ease-in-out;
+    transition: all .2s ease-in-out;
+	-moz-transition: all .2s ease-in-out;
+	-webkit-transition: all .2s ease-in-out;
 }
 .nav_x:hover {
 	transform: translate(-4px,4px) rotate(-90deg);
+	opacity: 0.5
 }
 
 .nav_x span {
@@ -678,33 +706,6 @@ body input ~ div {
   -webkit-transition: 0.5s ease-in-out 0.8s;
 }
 
-/*
-body input ~ div > ul {
-  text-align: center;
-  position: absolute;
-  top: 35%;
-  left: 20%;
-  right: 20%;
-}
-body input ~ div > ul > li {
-  opacity: 0;
-  transition: .5s;
-  transition-delay: 0s;
-  -moz-transition: .5s;
-  -moz-transition-delay: 0s;
-  -webkit-transition: .5s;
-  -webkit-transition-delay: 0s;
-}
-body input ~ div > ul > li > a {
-  text-decoration: none;
-  text-transform: uppercase;
-  color: #000;
-  font-weight: 700;
-  font-family: sans-serif;
-  display: block;
-  padding: 30px;
-}*/
-
 body input:checked ~ div {
 	height: 100%;
 	/*border: 10px solid #FFF;*/
@@ -714,16 +715,14 @@ body input:checked ~ div {
 }
 
 body input ~ div .new_section {
-	
-    font-size: 36px;
-    color: #000 !important;
-	font-weight: 200;
+	font-size: 20px;
+    font-weight: 400;
+	text-transform: uppercase;
+    color: #292929 !important;
 	letter-spacing: 1px;
     text-align: center;
-    height: auto;
-    
-	padding: 0;
-	opacity: 0;
+   	opacity: 0;
+	margin: 0.7% 0 10px 0;
 	transition: 0.5s ease-in-out 0.6s;
 	-moz-transition: 0.5s ease-in-out 0.6s;
 	-webkit-transition: 0.5s ease-in-out 0.6s;
@@ -736,25 +735,24 @@ body input:checked ~ div .new_section {
 	-webkit-transition: opacity 0.8s ease-in-out 0.4s;
 }
 
-body input ~ div .new_section a {
-	color: #000;
-} 
+body input ~ div .new_section_button {
+	margin: 0 7px;
+	padding: 10px 15px;
+	color: #292929;
+	border: 2px solid transparent;
+	cursor: pointer;
+}
 
 body input:checked ~ div .new_section_button {
-	cursor: pointer;
     transition: color .3s linear;
 	-moz-transition: color .3s linear;
 	-webkit-transition: color .3s linear;
 }
 
 body input ~ div .new_section_button-selected, 
-body input ~ div .new_section a:hover {
+body input ~ div .new_section_button:hover {
 	color: #FF2100 !important;
-}
-
-body input:checked ~ div .new_section_button-selected, 
-body input:checked ~ div .new_section a:hover {
-	color: #FF2100 !important;
+	border: 2px solid #FF2100;
 }
 
 body input ~ div .content-list{
@@ -775,38 +773,75 @@ body input:checked ~ div .content-list{
 }
 
 .content {
-	position: fixed;
-	/*display: inline-grid;*/
-	width: 90vw;
-    height: 60vh; 
+	position: absolute;
+	display: block;
+	width: 100%;
+    max-height: 100%; 
+	bottom: 0!important;
 	text-align: center;
-    top: 150px;
-	margin: 0 5vw 0 5vw;
+    top: 50px;
+	margin: 1vh auto 0 auto;
 	opacity: 0;
 	color: #FF2100;
 	transition: opacity 0.8s ease-in-out 0.1s;
 	-moz-transition: opacity 0.8s ease-in-out 0.1s;
 	-webkit-transition: opacity 0.8s ease-in-out 0.1s;
+	z-index: -1;
+	overflow: hidden;
 }
 
 .content_selected {
 	opacity: 1;
+	z-index: 1;
+	overflow-y: scroll!important;
 }
 
+body input ~ div .textbox {
+	margin: 20px auto;
+	width: 49%;
+	color: #292929;
+}
+body input ~ div .textbox:nth-child(2) {
+	margin-top: 25px;
+}
 
+body input ~ div .textbox-title {
+	font-size: 20px;
+	text-transform: uppercase;
+	font-weight: 200;
+	margin: 10px 0;
+	color: #ff2100;
+}
+
+body input ~ div .textbox-description {
+	font-size: 15px;
+	font-weight: 200;
+	margin: 10px 0;
+	color: #292929;
+	line-height: 25px;
+	text-align: center;
+}
+
+body input ~ div .textbox-description > a {
+	color: #ff2100;
+}
+body input ~ div .textbox-description > a:hover {
+	text-decoration: underline;
+}
 
 body input ~ div .footnote {
 	position: fixed;
 	width: 100%;
-	left: 0; margin: 0 auto;
-	bottom: 20px;
+	left: 0; margin: 0px auto;
+	bottom: 20px!important;
 	font-size: 12px;
 	font-weight: 400;
+	height: 40px;
+	padding-top: 20px;
 	color: #ff2100;
 	text-align: center;
 	visibility: hidden;
 	opacity: 0;
-	background-color: rgba(255,255,255,0,5);
 	transition: 0.4s ease-in-out 0.2s;
 	-moz-transition: 0.4s ease-in-out 0.2s;
 	-webkit-transition: 0.4s ease-in-out 0.2s;
@@ -818,6 +853,55 @@ body input:checked ~ div .footnote {
 	transition: opacity 0.5s ease-in-out 0.8s;
 	-moz-transition: opacity 0.5s ease-in-out 0.8s;
 	-webkit-transition: opacity 0.5s ease-in-out 0.8s;
+}
+
+@media all and (min-width: 1251px) {
+	body input ~ div .textbox {
+		margin-top: 1vh;
+	}	
+	body input ~div .textbox:nth-child(2) {
+		margin-top: 3vh;
+	}	
+	body input ~ div .textbox-description {
+		font-size: 14px;
+		line-height: 24px;
+	}
+}
+@media all and (max-width: 1250px) {
+	body input ~ div .textbox {
+		width: 55%;
+	}	
+}
+@media all and (max-width: 1100px) {
+	body input ~ div .textbox {
+		width: 65%;
+	}	
+}
+@media all and (max-width: 950px) {
+	body input ~ div .textbox {
+		width: 75%;
+	}	
+}
+@media all and (max-width: 800px) {
+	body input ~ div .textbox {
+		width: 85%;
+	}	
+	body input ~ div .textbox-title {
+		font-size: 17px;
+	}
+	body input ~ div .textbox-description {
+		font-size: 14px;
+		line-height: 22px;
+	}
+}
+@media all and (max-width: 550px) {
+	body input ~ div .new_section {
+		margin-top: 3%;
+		font-size: 18px;
+	}
+	body input ~ div .footnote {
+		position: relative;
+	}
 }
 
 /* -------------------------------- */
@@ -845,16 +929,19 @@ body input:checked ~ div .footnote {
     /*height: 30px;*/
     display: inline-block;
     font-size: 20px;
-    padding: 0;
     font-weight: 400;
-    margin: 0 0 0 40px;
-    letter-spacing: 1px;
-    font-family: "Helvetica";
+	letter-spacing: 1px;
+    margin: 0 0 0 0px;
 	text-transform: uppercase;
 	text-decoration: none;
-    transition: color .3s linear;
-	color: #292929;
+	color: #000;
 	cursor: pointer;
+	border: 2px solid transparent;
+	padding: 10px 15px;
+	opacity: 0.8;
+	transition: all 0.5s linear;
+	-moz-transition: all 0.5s linear;
+	-webkit-transition: all 0.5s linear;
 }
 
 @media all and (min-width: 780px) {
@@ -865,9 +952,9 @@ body input:checked ~ div .footnote {
 }
 
 .menu-list_item-selected, .menu-list_item:hover {
-	color: #ff2100; 
-	font-weight: 400;
-	text-decoration: none;
+	color: #000;
+	opacity: 1;
+	border: 2px solid #000;
 }
 /* -------------------------------- */
 
@@ -883,6 +970,7 @@ body input:checked ~ div .footnote {
     height: 500px;
     position: absolute;
     z-index: 0;
+	box-shadow: 10px ;
 }
 
 .list_bg {
@@ -929,6 +1017,7 @@ body input:checked ~ div .footnote {
 	margin-left: 0;
     width: 50%;
     text-align: left;
+	
 }
 
 .list_subtitle {
@@ -1122,6 +1211,7 @@ body input:checked ~ div .footnote {
     width: 100%;
     height: 100%;
     overflow: hidden;
+	
 }
 
 .list_photo {
@@ -1185,7 +1275,7 @@ body input:checked ~ div .footnote {
 	margin: 0px auto 0px auto;
 	top: 100%;
 	overflow: hidden;
-	background: #000;
+	background: #292929;
 }
 
 .item_section_intro {
@@ -1277,7 +1367,7 @@ body input:checked ~ div .footnote {
 	width:100%;
 	overflow:hidden;
 	cursor:pointer;
-	background: #000;
+	background: #292929;
 }
 
 .imgtalk{
@@ -1604,7 +1694,7 @@ a > svg.twitter,
 a > svg.instagram,
 a > svg.linkedin,
 a > svg.flickr {
-	color: #000;
+	color: #292929;
 }
 a > svg.facebook:hover,
 a > svg.twitter:hover,
@@ -1616,7 +1706,7 @@ a > svg.flickr:hover {
 
 .mail-footer {
 	margin-right: 5px;
-	color: #e0e0e0;
+	color: #E0E0E0;
 }
 
 .footer_logos {
@@ -2117,7 +2207,7 @@ a > svg.flickr:hover {
 
 /* SOCIAL MEDIA FEED -------------- */
 .social-feed-container {
-	width: 942px;
+	width: 300px;
 	height: 100%;
 	/*display: flex;
 	flex-direction: row;
@@ -2146,6 +2236,7 @@ a > svg.flickr:hover {
 	-webkit-transform: translateX(0);
 	-moz-transform: translateX(0);
 	transform: translateX(0);
+	width: 100%;
 }
 
 .social-feed-element:hover{
@@ -2257,7 +2348,7 @@ a > svg.flickr:hover {
 
 @media all and (min-width: 400px) {
 	.item_section_news {
-		width: 380px;
+		width: 400px;
 	}
 	.social-feed-container {
 		width: 380px;
@@ -2266,7 +2357,7 @@ a > svg.flickr:hover {
 
 @media all and (min-width: 550px) {
 	.item_section_news {
-		width: 460px;
+		width: 480px;
 	}
 	.social-feed-container {
 		width: 460px;
@@ -2278,10 +2369,13 @@ a > svg.flickr:hover {
 		columns: 2;
 		-moz-columns: 2;
 		-webkit-columns: 2;
+		column-gap: 35px;
+ 		-moz-column-gap: 35px;
+ 		-webkit-column-gap: 25px;
 		width: 942px;
 	}
 	.item_section_news {
-		width: 942px;
+		width: 962px;
 	}
 }
 
